# minecraft-cli

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build-n-release.yml
src/: main.rs
src/podman/: error.rs  mc.rs  mod.rs
