[package]
name = "mcli"
version = "0.1.0"
authors = ["Patrick Kerwood <patrick@kerwood.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
bytelines = "2.2.2"
tabular = "0.1.4"
chrono = "0.4.19"
ansi_term = "0.12.1"
regex = "1.4.5"
colored = "2"